# aris

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml  justfile  kei_desktop.html  rust-toolchain.toml
.cargo/: config-aarch64.toml  config-cross.toml  config-riscv.toml  config-zig.toml  config.toml
.github/workflows/: build-image.yml  ci.yml
board/: README.md
board/nanopi-r3s/: boot.cmd  uboot.config
board/nanopi-r3s/device-tree/: rk3566-nanopi-r3s.dts
configs/: default.toml  nanopi-r3s.toml  qemu-hmi.toml
configs/board/: README.md
configs/board/nanopi-r3s/: genimage.cfg  linux.config
configs/overlay/nanopi-r3s/etc/evernight/: gateway.env
configs/overlay/nanopi-r3s/etc/init.d/: S50usbgadget  S90evernight
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md
docs/ar/architecture/: overview.md
docs/ar/guides/: deployment.md  usb-c-provisioning.md
docs/ar/hardware/: nanopi-r3s-spec.md
docs/en/: SUMMARY.md
docs/en/architecture/: overview.md
docs/en/guides/: deployment.md  usb-c-provisioning.md
docs/en/hardware/: nanopi-r3s-spec.md
docs/es/: README.md  SUMMARY.md
docs/es/architecture/: overview.md
docs/es/guides/: deployment.md  usb-c-provisioning.md
docs/es/hardware/: nanopi-r3s-spec.md
docs/fr/: README.md  SUMMARY.md
docs/fr/architecture/: overview.md
docs/fr/guides/: deployment.md  usb-c-provisioning.md
docs/fr/hardware/: nanopi-r3s-spec.md
docs/guides/: conformance-report.md  wpt-report.md
docs/ja/: README.md  SUMMARY.md
docs/ja/architecture/: overview.md
docs/ja/guides/: deployment.md  usb-c-provisioning.md
docs/ja/hardware/: nanopi-r3s-spec.md
docs/ko/: README.md  SUMMARY.md
docs/ko/architecture/: overview.md
docs/ko/guides/: deployment.md  usb-c-provisioning.md
docs/ko/hardware/: nanopi-r3s-spec.md
docs/ru/: README.md  SUMMARY.md
docs/ru/architecture/: overview.md
docs/ru/guides/: deployment.md  usb-c-provisioning.md
docs/ru/hardware/: nanopi-r3s-spec.md
docs/zhs/: README.md  SUMMARY.md
docs/zhs/architecture/: overview.md
docs/zhs/guides/: deployment.md  usb-c-provisioning.md
docs/zhs/hardware/: nanopi-r3s-spec.md
docs/zht/: README.md  SUMMARY.md
docs/zht/architecture/: overview.md
docs/zht/guides/: deployment.md  usb-c-provisioning.md
docs/zht/hardware/: nanopi-r3s-spec.md
kernel/nanopi-r3s/patches/: README.md
overlay/nanopi-r3s/usr/sbin/: aris-usb-gadget
package/common/: README.txt
package/linux/: install_evernight.sh
package/macos/: install_evernight.command
package/windows/: install_evernight.bat
patches/boa_engine/: Cargo.toml
patches/boa_engine/src/builtins/atomics/: mod.rs
patches/boa_engine/src/builtins/promise/: mod.rs
patches/boa_engine/src/context/: mod.rs
patches/boa_gc/: .cargo_vcs_info.json  Cargo.toml
patches/boa_parser/: Cargo.toml
scripts/: Dockerfile.builder  build.py  build_browser.py  build_image.py  build_uboot.py  capture_aris.ps1  check_env.py  dev_shell.py  fetch_wpt.py  flash_sd.py  iconmap.ps1  iconmap_zoom.ps1  ignition_test.py  menumap.ps1  ppm_width.ps1  qemu_desktop.py  qemu_ignition.py  qemu_test.py  setup_cross.py  zig_cc.sh
scripts/conformance/: canvas2d_tests.json  report.py  wpt_report.py  wpt_results.json
scripts/package/: autorun.inf  build_installer_image.sh
scripts/package/android/: install_evernight.txt
scripts/package/linux/: install_evernight.sh
scripts/package/macos/: install_evernight.command
scripts/utils/: build_env.py
tests/: run_all.py
tests/fixtures/: create_fixtures.sh  kei_desktop.wasm  kei_desktop_1200x800.rgba  kei_desktop_1280x800.rgba  kei_desktop_rendered.html  lagrange_index.html  logo_base64.txt  tairitsu_website.wasm
tests/fixtures/evernight-binaries/aarch64-apple-darwin/release/: evernight
tests/fixtures/evernight-binaries/aarch64-unknown-linux-musl/release/: evernight
tests/fixtures/evernight-binaries/x86_64-apple-darwin/release/: evernight
tests/fixtures/evernight-binaries/x86_64-unknown-linux-musl/release/: evernight
tests/fixtures/evernight-fixture/: Cargo.toml
tests/fixtures/evernight-fixture/src/: main.rs
tests/gadget/: test_gadget_configfs.py  test_qemu_gadget.py
tests/hardware/: ethernet_test.rs  gpio_test.rs
tests/installer/: test_os_reactions.py  test_windows_wine.py
tests/integration/: boot_test.rs  evernight_test.rs
tests/tests/fixtures/evernight-binaries/aarch64-apple-darwin/release/: evernight
tests/tests/fixtures/evernight-binaries/aarch64-unknown-linux-musl/release/: evernight
tests/tests/fixtures/evernight-binaries/x86_64-apple-darwin/release/: evernight
tests/tests/fixtures/evernight-binaries/x86_64-unknown-linux-musl/release/: evernight
tests/unit/: build_image.sh  fat_reader.py  test_image_content.py
tests/windows/: setup_vm.py
