[package]
name = "evernight-fixture"
version = "0.1.0"
edition = "2021"
publish = false
description = "Minimal pure-Rust evernight stand-in for cross-compile fixture tests"

[[bin]]
name = "evernight"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
